Fix: date-for-answer form element spacing.

--- a/app/assets/stylesheets/pq.scss
+++ b/app/assets/stylesheets/pq.scss
@@ -206,7 +206,7 @@ textarea {resize:none; &.form-control {width: 100%;}}
   .pq-columns {
     .col-md-7 {padding-left: 0px;}
     .dashboard-column-2 {
-      .internal-deadline-form {
+      .internal-deadline-form, .date-for-answer-form {
         margin-bottom: 20px;
         label {margin-bottom: 0px;}
         .internal-dtp {margin: 0px 0px 10px 0px;}
